
<resources>
    <string name="app_name">icreatorsdksampler</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_text2">iCreatorScan</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_show">ShowActivity</string>-->
    <!--更改二维码框的配置-->
    <string name="scan_text">将二维码放入框内扫一扫</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_Regist">RegistActivity</string>

    <!--Login页面文言-->
    <string name="login_account">账号</string>
    <string name="login_account_hint">请输入手机号</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_glance">先逛逛</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_regist">注册</string>
    <string name="login_login">登陆</string>


    <!--Regist页面文言-->
    <string name="regist_account">账号</string>
    <string name="regist_account_hint">请输入需要注册的手机号</string>
    <string name="regist_verifycode">验证码</string>
    <string name="regist_verifycode_hint">请输入4位数验证码</string>
    <string name="regist_set_pw">设置密码</string>
    <string name="regist_setpw_hint">请输入6-16位字母或数字</string>
    <string name="title_activity_mine">MineActivity</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="verify_code_send">验证码</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>



</resources>
